--- a/products/products.css
+++ b/products/products.css
@@ -13,7 +13,7 @@ body {
     
 }
 
-.product-image {
+#product-image {
     height: 300px;
 }
 
@@ -46,7 +46,7 @@ body {
     font-weight: 900;
 }
 
-.product-button:hover{
+#product-button:hover{
     cursor: pointer;
     opacity: .7;
 }
