--- a/shopping-cart/shopping-cart.css
+++ b/shopping-cart/shopping-cart.css
@@ -1,5 +1,17 @@
+body {
+    background-color: darkgreen;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    text-decoration: underline;
+}
 
 table {
+    text-align: center;
+    margin: 0 auto;
+    font-size: larger;
     border: 2px solid black;
 }
 
@@ -9,4 +21,33 @@ tr {
 
 td {
     border: 2px solid black;
+    background-color: seagreen;
+}
+
+button {
+    margin: 10px;
+    background-color: rgb(139, 51, 19);
+    width: 400px;
+    height: 100px;
+    border-radius: 2rem;
+    font-size: 50px;
+    color: wheat;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: rgb(114, 18, 16);
+}
+
+span {
+    font-size: 30%;
+}
+
+.table-div {
+    margin: 0 auto;
+}
+
+.purchase-button {
+    height: auto;
+    text-align: center;
 }
