--- a/products/products.css
+++ b/products/products.css
@@ -1,11 +1,13 @@
 body {
-    background-color: black;
+    background-color: darkgreen;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h2 {
     text-align: center;
-    color: wheat;
+    color: black;
     font-size: 40px;
+    text-decoration: underline;
 }
 
 li {
@@ -65,4 +67,33 @@ li {
 #flower-list {
     max-width: 900px;
     /* position: relative; */
+}
+
+.nav-bar {
+    width: 100%;
+    height: 100px;
+    background-color: rgb(255, 255, 255);
+    display: inline-flex;
+    justify-content: space-evenly;
+    opacity: .7;  
+    border-radius: 2rem; 
+}
+
+a {
+    font-family: sans-serif;
+    font-size: larger;
+    padding: 10px;
+    margin-top: 30px;
+    text-align: center;
+    background-color: rgb(223, 100, 48);
+    color: seagreen;
+    width: 100px;
+    height: 33%;
+    border-radius: 1rem;
+    
+}
+
+a:hover {
+    color: teal;
+    background-color: yellowgreen;
 }
