--- a/shopping-cart/shopping-cart.css
+++ b/shopping-cart/shopping-cart.css
@@ -51,3 +51,32 @@ span {
     height: auto;
     text-align: center;
 }
+
+.nav-bar {
+    width: 100%;
+    height: 100px;
+    background-color: rgb(255, 255, 255);
+    display: inline-flex;
+    justify-content: space-evenly;
+    opacity: .7;  
+    border-radius: 2rem; 
+}
+
+a {
+    font-family: sans-serif;
+    font-size: larger;
+    padding: 10px;
+    margin-top: 30px;
+    text-align: center;
+    background-color: rgb(223, 100, 48);
+    color: seagreen;
+    width: 100px;
+    height: 33%;
+    border-radius: 1rem;
+    
+}
+
+a:hover {
+    color: teal;
+    background-color: yellowgreen;
+}
