--- a/products/products.css
+++ b/products/products.css
@@ -97,3 +97,28 @@ a:hover {
     color: teal;
     background-color: yellowgreen;
 }
+
+.product-create-form {
+    position: relative;
+    top: 25px;
+    display: flex;
+    width: 250px;
+    height: 250px;
+    border: 5px solid black;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+form {
+    margin: 5px;
+}
+
+input {
+
+    margin: 10px;
+}
+
+label {
+    align-items: flex-start;
+}
